# backend

./: .gitignore  Dockerfile  alembic.ini  delete_vpbank_data.py  docker-compose.yaml  main.py  pyproject.toml  test_vpbank.py
.claude/: CLAUD.md
app/adapters/db/: database.py
app/adapters/oauth/: google_oauth_adapter.py
app/api/: auth.py  bank_accounts.py  google_auth.py  health.py
app/bank/: base_bank.py  utils.py  vpbank.py
app/handlers/: exception_handlers.py
app/middlewares/: cors_middleware.py
app/repositories/: account_repository.py  bank_account_repository.py  revoked_tokens_repository.py  transaction_repository.py
app/services/: auth_service.py  authorization_service.py  bank_account_service.py  oauth_service.py  transaction_service.py
app/types/: account_dtos.py  auth_dtos.py  bank_account_dtos.py  transaction_dtos.py
app/types/dtos/: token_dtos.py
app/types/exceptions/: __init__.py
app/utils/: encryption.py  password.py  settings.py  token_utils.py
migrations/: env.py
migrations/versions/: 00e118b062b5_revoked_tokens.py  05ddb85711c3_update_transactions_table.py  17d3af435f87_add_bank_accounts_and_transactions_.py  1aa79ae24847_revoked_tokens.py  6f25321b2d5e_stop_using_enums_in_bankaccount.py  eb826c519068_account_model.py
models/: __init__.py  account_model.py  bank_account_model.py  revoked_token_model.py  transaction_model.py
postman/: VinaTien_Backend_API.postman_collection.json
