[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.1",
    "fastapi>=0.124.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic[email]>=2.12.5",
    "psycopg2-binary>=2.9.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "requests>=2.32.5",
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
